--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
 	<!-- TODO: Remove or change this placeholder text -->
 	<string name="hello_blank_fragment">Hello blank fragment</string>
+	<string name="start_label">Start</string>
+	<string name="restart_label">Restart</string>
+	<string name="value_X">X</string>
+	<string name="value_O">O</string>
+
 </resources>
