--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
 	<string name="restart_label">Restart</string>
 	<string name="value_X">X</string>
 	<string name="value_O">O</string>
+	<string name="about_text">Tic-Tac-Toe\n\nA simple android project developed in Kotlin by\nAnchith Acharya U.\n\n2020</string>
 
 </resources>
